--- a/style.css
+++ b/style.css
@@ -96,3 +96,83 @@ img:hover {
   width: 80px;
   height: 50px;
 }
+
+body {
+  font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  background-color: #fff;
+  padding: 20px;
+}
+
+h1 {
+  font-size: 2em;
+  margin-bottom: 10px;
+  color: #000;
+}
+
+main {
+  padding: 20px;
+}
+
+section {
+  margin-bottom: 20px;
+}
+
+h2 {
+  font-size: 1.5em;
+  margin-bottom: 10px;
+  color: #000;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+li {
+  margin-bottom: 10px;
+}
+
+img {
+  width: 30px;
+  height: 30px;
+}
+
+footer {
+  background-color: rgb(237, 255, 158);
+  padding: 20px;
+  text-align: center;
+  color: #000;
+}
+
+section#about {
+  background-color: bisque;
+  border: solid 1px bisque;
+  border-radius: 10px;
+}
+
+section#technology {
+  background-color: burlywood;
+  background-color: burlywood;
+  border: solid 1px burlywood;
+  border-radius: 10px;
+}
+
+section#benefits {
+  background-color: cornsilk;
+  background-color: cornsilk;
+  background-color: cornsilk;
+  border: solid 1px cornsilk;
+  border-radius: 10px;
+}
+
+img:hover {
+  transition: 2s;
+  height: 200px;
+  width: 200px;
+}
